Fix vertical alignment for each table row.

--- a/site/public/sass/components/_tables.scss
+++ b/site/public/sass/components/_tables.scss
@@ -1,5 +1,6 @@
 table {
 	text-align: left;
+	font-size: 1.1em;
 	font-family: inherit;
 }
 
@@ -21,6 +22,7 @@ th {
 .rating-list {
     clear: both;
     display: table;
+    height: 25px;
 
 	&:after {
 		content: '';
@@ -29,8 +31,9 @@ th {
 	}
 
 	li {
-		width: 9%;
+		width: 10%;
 		padding-right: 1%;
+	    padding-top: 5px;
 		float: left;
 		display: block;
 	}
@@ -39,4 +42,10 @@ th {
 		width: 100%;
 		display: block;
 	}
+}
+
+
+
+.rating-col {
+	width: 20%;
 }
